--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "This folder contains the express server for the project.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --exec \"node index.js\"",
-    "start": "node index.js",
+    "dev": "nodemon --watch src --exec \"node src/server.js\"",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,9 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.2"
+    "mongoose": "^9.0.2",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
