--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,13 @@ jobs:
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Run lint (if available)
         run: npm run lint --if-present
 
-      - name: Run tests (if available)
-        run: npm test -- --watch=false
-        continue-on-error: true
+      - name: Run tests (client Vitest)
+        run: npx vitest -c vitest.config.js run --reporter verbose
 
       - name: Build client
         run: npm run build
