--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "dependencies": {
     "react-hook-form": "^7.69.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.3.1",
+    "happy-dom": "^20.0.11",
+    "msw": "^1.2.3",
+    "vitest": "^4.0.16"
   }
 }
