--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -10,10 +10,12 @@ jobs:
   build:
     name: Client: Install, Lint, Test & Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     defaults:
       run:
-        working-directory: client
+        working-directory: frontend
 
     strategy:
       matrix:
@@ -28,52 +30,51 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install client dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
 
       - name: Run lint
         run: npm run lint --if-present
 
       - name: Run tests (Vitest)
         run: |
-          # Run Vitest with JUnit reporter and coverage
-          npx vitest -c vitest.config.js run --reporter junit --reporter verbose --coverage --coverageProvider=v8 || true
-          # Move junit output (if any) into test-results directory
-          mkdir -p test-results
-          if [ -f junit.xml ]; then mv junit.xml test-results/vitest-junit.xml; fi
+          npm test -- --run --coverage
 
       - name: Upload test results (client)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: client-test-results
-          path: client/test-results
+          path: frontend/test-results
+          if-no-files-found: ignore
 
       - name: Upload coverage (client)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: client-coverage
-          path: client/coverage
+          path: frontend/coverage
+          if-no-files-found: ignore
 
       - name: Upload coverage to Codecov
         if: always()
         uses: codecov/codecov-action@v4
         with:
-          files: client/coverage/**
+          # Vitest commonly writes lcov.info here; adjust if needed
+          files: frontend/coverage/lcov.info
           flags: client
-        env:
-          # Add CODECOV_TOKEN as a repo secret for private repos. Public repos don't need it.
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
 
       - name: Build client
         run: npm run build --if-present
 
       - name: Upload build artifact (client)
-        if: success() && always()
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: client-dist
-          path: client/dist
+          path: frontend/dist
+          if-no-files-found: ignore
