--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -13,6 +13,9 @@ FROM nginx:alpine
 # Copy build output to nginx
 COPY --from=build /app/dist /usr/share/nginx/html
 
+# Copy custom nginx config to enable API proxy
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Expose web port
 EXPOSE 80
 
