uploading the backend and front end changes for routing correction

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,17 @@
 # Copy this file to `.env` and fill in real values
+
+# ===== LOCAL DEVELOPMENT =====
 PORT=4000
-# MongoDB connection string (optional). Example: mongodb://localhost:27017/mydb
-MONGO_URI=
+MONGO_URI=mongodb://localhost:27017/semt
 NODE_ENV=development
+JWT_SECRET=dev_secret
+
+# ===== DOCKER COMPOSE =====
+# MONGO_URI=mongodb://mongo:27017/semt
+
+# ===== AZURE DEPLOYMENT =====
+# Set these as environment variables in Azure Container Apps:
+# PORT=4000
+# MONGO_URI=<cosmos-connection-string>
+# NODE_ENV=production
+# JWT_SECRET=<generate-secure-random-string>
