--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -16,5 +16,9 @@ COPY . .
 # Expose API port
 EXPOSE 4000
 
+# Health check for Azure Container Apps
+HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:4000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" || exit 1
+
 # Start server
 CMD ["npm", "start"]
