--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
-    "vitest": "^1.4.10",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "vitest": "^4.0.16"
   },
   "directories": {
     "test": "tests"
