--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - backend
     environment:
-      - VITE_API_BASE_URL=http://localhost:4000
+      - VITE_API_BASE_URL=http://backend:4000
 
   backend:
     build:
