--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -5,6 +5,11 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+
+# Accept build args for environment variables
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
 RUN npm run build
 
 # Production stage
@@ -13,8 +18,25 @@ FROM nginx:alpine
 # Copy build output to nginx
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy custom nginx config to enable API proxy
+# Copy custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy script to inject runtime environment variables
+COPY <<'EOF' /docker-entrypoint.d/40-inject-env.sh
+#!/bin/sh
+set -e
+
+# Create runtime config file with environment variables
+cat > /usr/share/nginx/html/config.js <<EOFINNER
+window.ENV = {
+  VITE_API_BASE_URL: "${VITE_API_BASE_URL}"
+};
+EOFINNER
+
+echo "Runtime config injected: VITE_API_BASE_URL=${VITE_API_BASE_URL}"
+EOF
+
+RUN chmod +x /docker-entrypoint.d/40-inject-env.sh
 
 # Expose web port
 EXPOSE 80
